# cow-tsp

./: .gitignore  README.md  cows.py  cows.txt  pyproject.toml
cows_tsp/: __init__.py  cow_reader.py
